...
    }()
    
    @IBAction func signUpPressed(_ sender: Any) {
        guard let username = self.usernameTF.text, !username.isEmpty,
            let password = self.passwordTF.text, !password.isEmpty,
            let phoneNumber = self.phoneTF.text, !phoneNumber.isEmpty else {
                let alert = UIAlertController(title: "Missing some fields", message: "Please try again.", preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
                self.present(alert, animated: true, completion: nil)
                return
        }
        
        //Create a signup form
...
